# dc-public-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/clean/: arrests_by_district_category_year.tsv  arrests_by_district_year.tsv  arrests_by_ward_category_year.tsv  arrests_by_ward_year.tsv  officers.csv
data/raw/: 2024AdultArrests_OpenData.xlsx  Crime_Incidents_in_2025.csv  Police_Service_Areas.geojson  Wards_from_2022.geojson  sources.md
notebooks/: 311_EDA.ipynb  311_for_testimony.ipynb  DC_MPD_Crime_stats.ipynb  MPD_Arrests_2024_EDA.ipynb
reports/: arrest_report.md  citywide_report.html  citywide_report.md  style.css  ward_1_report.html  ward_1_report.md  ward_2_report.html  ward_2_report.md  ward_3_report.html  ward_3_report.md  ward_4_report.html  ward_4_report.md  ward_5_report.html  ward_5_report.md  ward_6_report.html  ward_6_report.md  ward_7_report.html  ward_7_report.md  ward_8_report.html  ward_8_report.md
reports/html/: ward_1_report.html  ward_2_report.html  ward_3_report.html  ward_4_report.html  ward_5_report.html  ward_6_report.html  ward_7_report.html  ward_8_report.html
reports/wards/: ward_1.0_report.md  ward_1_report.html  ward_1_report.md  ward_2.0_report.md  ward_2_report.html  ward_2_report.md  ward_3.0_report.md  ward_3_report.html  ward_3_report.md  ward_4.0_report.md  ward_4_report.html  ward_4_report.md  ward_5.0_report.md  (+11 more)
scripts/: Arrest_ward.py  ETL.py  generate_ward_reports.py  render_markdown.py  render_pdfs.sh  render_reports.py  test_ward_reports.py
tests/: conftest.py  test_arrest_report.py
(+8 files in other folders)
