[project]
name = "dc-public-data"
version = "0.1.0"
description = "ETL, analysis, and reporting for Washington DC public data (policing, crime, 311)"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "markdown>=3.10.2",
    "markdown2>=2.5.5",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyproj>=3.7.2",
    "pyreadstat>=1.3.3",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
